syntax = "proto3";

package server;

// 从-I指定的目录下寻找该proto文件
import "doc.proto";
import "term_query.proto";

message DocId {
  string Id = 1;
  int64 Weight = 2;
}

message ResCount {
  int32 Count = 1;
}

message Request {
  messages.TermQuery Query = 1;  //TermQuery类型引用自term_query.proto
  uint64 OnFlag = 2;
  uint64 OffFlag = 3;
  repeated uint64 OrFlags = 4;
}

message Result {
  repeated messages.Document Results = 1;
}

message CountRequest {
}

service IndexService {
  rpc DelDoc(DocId) returns (ResCount);
  rpc AddDoc(messages.Document) returns (ResCount);
  rpc Search(Request) returns (Result);
  rpc Count(CountRequest) returns (ResCount);
}

// protoc -I=D:/code/seetaSearch/messages/proto --gogofaster_opt=Mdoc.proto=seetaSearch/messages --gogofaster_opt=Mterm_query.proto=seetaSearch/messages --gogofaster_out=plugins=grpc:./server --proto_path=./server/proto request.proto